# minutemail-python

./: DISTRIBUTION.md  INSTALL.md  LICENSE  README.md  pyproject.toml
src/minutemail/: __init__.py  client.py  errors.py
src/minutemail_sdk.egg-info/: PKG-INFO  SOURCES.txt
